--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  width:300px;
+  height: 300px;
+  overflow-y: scroll;
+}
 
+</style>
+</head>
+<body>
+<p style="font-family: Arial"><h2>List of current emojis:</h2>
+  <hr>
+alien,
+angry,
+anguished,
+astonished,
+blush,
+blush2,
+cold-sweat,
+confounded,
+confused,
+cry,
+disappointed-relieved,
+disappointed,
+dizzy-face,
+expressionless,
+fearful,
+flushed,
+frowning,
+ghost,
+grimacing,
+grinning,
+head-bandage,
+heart-eyes,
+heart,
+hugging,
+hushed,
+imp,
+innocent,
+joy,
+kissing-closed-eyes,
+kissing-heart,
+kissing-smiling-eyes,
+kissing,
+laughing,
+mask,
+money-mouth,
+nerd,
+neutral-face,
+no-mouth,
+perservere,
+poop,
+rage,
+relieved,
+rofl,
+rolling-eyes,
+sad,
+scream,
+sleeping,
+sleepy,
+slight-smile,
+smile,
+smiley,
+smiling-imp,
+smirk,
+sob,
+stuck-out-toungue-winking-eye,
+stuck-out-toungue-winking-eyes,
+stuck-out-toungue,
+sunglasses,
+surprised,
+sweat-smile,
+sweat,
+thermometer-face,
+thinking,
+tired,
+triumph,
+unamused,
+very-sad,
+weary,
+wink,
+worried,
+yum,
+zipper-mouth, </p>
+</body>
+</html>
