--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -15,13 +15,7 @@ body {
 <p style="font-family: Arial"><h2>List of current emojis:</h2>
   <hr>
   <div id="container">
-_alien_, _angry_, _anguished_, _astonished_, _blush_, _blush2_, _cold-sweat_, _confounded_, _confused_, _cry_, _disappointed-relieved_,
-_disappointed_, _dizzy-face_, _expressionless_, _fearful_, _flushed_, _frowning_, _ghost_, _grimacing_, _grinning_, _head-bandage_,
-_heart-eyes_, _heart_, _hugging_, _hushed_, _imp_, _innocent_, _joy_, _kissing-closed-eyes_, _kissing-heart_, _kissing-smiling-eyes_,
-_kissing_, _laughing_, _mask_, _money-mouth_, _nerd_, _neutral-face_, _no-mouth_, _perservere_, _poop_, _rage_, _relieved_, _rofl_,
-_rolling-eyes_, _sad_, _scream_, _sleeping_, _sleepy_, _slight-smile_, _smile_, _smiley_, _smiling-imp_, _smirk_, _sob_,
-_stuck-out-toungue-winking-eye_, _stuck-out-toungue-winking-eyes_, _stuck-out-toungue_, _sunglasses_, _surprised_, _sweat-smile_,
-_sweat_, _thermometer-face_, _thinking_, _tired_, _triumph_, _unamused_, _very-sad_, _weary_, _wink_, _worried_, _yum_, _zipper-mouth_
+    You can copy paste emojis from here: 
 </div>
  </p>
 </body>
