--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -15,7 +15,7 @@ body {
 <p style="font-family: Arial"><h2>List of current emojis:</h2>
   <hr>
   <div id="container">
-    You can copy paste emojis from here: 
+    <b>You can copy paste emojis from here: </b><hr>
 </div>
  </p>
 </body>
