--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -12,7 +12,7 @@ body {
 <script src="popup.js" type="text/javascript"></script>
 </head>
 <body>
-<p style="font-family: Arial"><h2>List of current emojis:</h2>
+<p style="font-family: Arial"><h2>Current emojis:</h2>
   <hr>
   <div id="container">
     <b>You can copy paste emojis from here: </b><hr>
