--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -16,6 +16,8 @@ body {
   <hr>
   <div id="container">
     <b>You can copy paste emojis from here: </b><hr>
+    <br>
+    <b>Faces:</b><br>
 </div>
  </p>
 </body>
