--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -7,7 +7,11 @@ body {
   height: 300px;
   overflow-y: scroll;
 }
-
+html {
+  width:300px;
+  height: 300px;
+  overflow-y: scroll;
+}
 </style>
 <script src="popup.js" type="text/javascript"></script>
 </head>
