remove console.log

--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -22,6 +22,10 @@ html {
     <b>You can copy paste emojis from here: </b><hr>
     <b>Faces:</b><br>
 </div>
+<hr>
+<footer>
+ScratchMoji is made by <a href="https://scratch.mit.edu/users/PackersRuleGoPack">@PackersRuleGoPack</a>. Questions? Comments? Concerns? Comment on <a href="https://scratch.mit.edu/users/scratchmoji">@ScratchMoji</a>
+</footer>
  </p>
 </body>
 </html>
