--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -12,6 +12,20 @@ html {
   height: 300px;
   overflow-y: scroll;
 }
+.button {
+  height: 26px;
+  width: 26px;
+  padding: 2px;
+  background-color: white;
+  border: none;
+  margin: none;
+  transition: all, 1.5s, ease;
+  border-radius: 5px;
+}
+
+.button:hover {
+  background-color: #E5E5E5;
+}
 </style>
 <script src="popup.js" type="text/javascript"></script>
 </head>
