--- a/extensions/popup.html
+++ b/extensions/popup.html
@@ -21,6 +21,11 @@ html {
   margin: none;
   transition: all, 1.5s, ease;
   border-radius: 5px;
+  font-size: 17px;
+  vertical-align: text-bottom;
+}
+.Clicked {
+  background-color: #555;
 }
 
 .button:hover {
